--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -1,16 +1,20 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "mysql.name" . }}
+  name: {{ include "mysql.fullname" . }}
   namespace: {{ $.Release.Namespace }}
+  labels: {{- include "common.labels.standard" . | nindent 4 }}
 type: Opaque
 data:
-  ROOT_PASSWORD: {{ default "" .Values.auth.rootPassword | b64enc | quote }}
-  REPL_USER: {{ default "repl" .Values.auth.replicationUser | b64enc | quote }}
-  REPL_PASS: {{ default "" .Values.auth.replicationPassword | b64enc | quote }}
+  ROOT_PASSWORD: {{ include "mysql.auth.root.password" . }}
+  MYSQL_USER: {{ include "mysql.auth.username" . }}
+  MYSQL_PASS: {{ include "mysql.auth.password" . }}
   {{- if eq .Values.global.architecture "group-replication" }}
-  MONITOR_USER: {{ default "monitor" .Values.global.auth.monitorUsername | b64enc | quote }}
-  MONITOR_PASS: {{ default "" .Values.global.auth.monitorPassword | b64enc | quote }}
+  REPL_USER: {{ include "mysql.auth.replication.username" . }}
+  REPL_PASS: {{ include "mysql.auth.replication.password" . }}
+  MONITOR_USER: {{ include "proxysql.auth.monitor.username" .  }}
+  MONITOR_PASS: {{ include "proxysql.auth.monitor.password" . }}
+  PROXYSQL_USER: {{ include "proxysql.auth.admin.username" . }}
+  PROXYSQL_PASS: {{ include "proxysql.auth.admin.password" . }}
   {{- end }}
-  MYSQL_USER: {{ default "" .Values.global.auth.username | b64enc | quote }}
-  MYSQL_PASS: {{ default "" .Values.global.auth.password | b64enc | quote }}
+
