--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -9,7 +9,7 @@ data:
   ROOT_PASSWORD: {{ include "mysql.auth.root.password" . }}
   MYSQL_USER: {{ include "mysql.auth.username" . }}
   MYSQL_PASS: {{ include "mysql.auth.password" . }}
-  {{- if eq .Values.global.architecture "group-replication" }}
+  {{- if eq .Values.architecture "group-replication" }}
   REPL_USER: {{ include "mysql.auth.replication.username" . }}
   REPL_PASS: {{ include "mysql.auth.replication.password" . }}
   MONITOR_USER: {{ include "proxysql.auth.monitor.username" .  }}
